mobile overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -3,5 +3,13 @@
     padding: 0;
 }
 .App{
+    min-height: 100vh;
+    max-width: 100vw;
     font-family: 'Roboto', sans-serif;
+    font-size: 1rem;
+    background-color: #f8f8f8;
 }
+/* For Webkit (Chrome, Safari) */
+::-webkit-scrollbar {
+    width: 1px;
+  }
