--- a/src/pages/Finish.css
+++ b/src/pages/Finish.css
@@ -15,3 +15,12 @@
     padding: 4rem;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+@media screen and (max-width: 480px){
+    .resultbox{
+        height: 80vh;
+    }
+    .resultbox>div{
+        padding: 4rem 0.5rem;
+        box-shadow: none;
+    }
+}
