--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -20,6 +20,7 @@
   width: 300px;
 }
 .homeContainer > form > div {
+  max-width: 90%;
   display: grid;
   text-align: start;
   align-items: center;
@@ -44,4 +45,19 @@
 .homeContainer > form > div > input {
   width: 20px;
   height: 20px;
+}
+
+@media screen and (max-width: 480px){
+  .homeContainer{
+    min-height: 90vh;
+  }
+  .homeContainer > form{
+    padding: 5rem 1.2rem;
+  }
+  .homeContainer > form > input {
+    width: 250px;
+  }
+  .homeContainer > form > button {
+    width: 250px;
+  }
 }
