--- a/src/pages/TestPage/Test.css
+++ b/src/pages/TestPage/Test.css
@@ -2,9 +2,9 @@
   display: grid;
   grid-template-columns: 3fr 1fr;
 }
-.testPage > div:nth-of-type(1){
-    order: 2;
-    padding: 0.5rem 1rem;
+.testPage > div:nth-of-type(1) {
+  order: 2;
+  padding: 0.5rem 1rem;
 }
 .testPage .quesSection button {
   padding: 0.7rem 1.5rem;
@@ -24,7 +24,6 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: justify;
-  background-color: #f8f8f8;
 }
 .testPage > .quesSection > .ques {
   display: flex;
@@ -74,29 +73,29 @@
   background-color: #014751;
   cursor: pointer;
 }
-.testPage > .navSection > .submit:hover{
-    background-color: #003d46;
+.testPage > .navSection > .submit:hover {
+  background-color: #003d46;
 }
-@media screen and (orientation: portrait){
-    .testPage{
-        grid-template-columns: 1fr;
-    }
-    .testPage > .navSection{
-        display: flex;
-        min-height: 10vh;
-    }
-    .testPage > .navSection > span > .ques{
-        padding: 0.5rem 1rem;
-        font-size: 1rem;
-    }
-    .testPage > .navSection > .submit{
-        display: none;
-    }
-    .testPage > div:nth-of-type(2){
-        order: 2;
-        padding: 0.5rem 1rem;
-    }
-    .testPage > .quesSection{
-        min-height: 50vh;
-    }
+@media screen and (orientation: portrait) {
+  .testPage {
+    grid-template-columns: 1fr;
+  }
+  .testPage > .navSection {
+    display: flex;
+    min-height: 10vh;
+  }
+  .testPage > .navSection > span > .ques {
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+  }
+  .testPage > .navSection > .submit {
+    display: none;
+  }
+  .testPage > div:nth-of-type(2) {
+    order: 2;
+    padding: 0.5rem 1rem;
+  }
+  .testPage > .quesSection {
+    min-height: 50vh;
+  }
 }
